--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <audio src="" id="audio"></audio>
     <div class="music-player">
-        <h1>José Jiménez</h1>
+        <h1>José Gasca</h1>
         <h1>NUA: 796438</h1>
         <h2 class="music-name">Song One</h2>
         <p class="artist-name">Artist</p>
@@ -36,7 +36,7 @@
                 <span></span>
                 <span></span>
             </button>
-            <button class="btn forkward-btn">
+            <button class="btn forward-btn">
                 <img src="./images/nxt.png">
             </button>
         </div>
